<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <AutoCompleteTextView
        android:id="@+id/autocomplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:ignore="LabelFor"
        android:hint="@string/enter_a_city_place"
        android:completionThreshold="1"
        android:imeOptions="actionNext"
        android:maxLines="1"/>

    <android.support.v7.widget.CardView
        app:layout_constraintTop_toBottomOf="@+id/autocomplete"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/cardview"
        android:layout_height="wrap_content"
        android:elevation="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/place"/>

            <TextView
                android:id="@+id/place"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:hint="@string/area" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/temp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                />
                <TextView
                    android:paddingStart="5dp"
                    android:paddingEnd="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/celcius"/>
            </LinearLayout>

        </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="@string/min"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                    android:id="@+id/min_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                     />

                <TextView
                    android:paddingStart="5dp"
                    android:paddingEnd="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/celcius"/>
            </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="@string/max"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                    android:id="@+id/max_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                     />

                <TextView
                    android:paddingStart="5dp"
                    android:paddingEnd="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/celcius"/>
            </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        app:layout_constraintTop_toBottomOf="@+id/cardview"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:elevation="10dp"
        android:id="@+id/cardview_2"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/hum"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                 />

                <TextView
                    android:paddingStart="5dp"
                    android:paddingEnd="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/per"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/wind"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/wind_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    />
            <TextView
                android:paddingStart="5dp"
                android:paddingEnd="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/km_h"/>
            </LinearLayout>

        </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="@string/desc"/>

                <TextView
                    android:id="@+id/weather_desc"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                     />

            </LinearLayout>
    </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        app:layout_constraintTop_toBottomOf="@+id/cardview_2"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:elevation="5dp"
        android:id="@+id/error_card"
        android:layout_height="wrap_content"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/notfound"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/error"
                android:textColor="@color/error"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>